src/test/deca/context/invalid/cas_printlnInvalid.deca
// Description:
//    condition valide
//
// Resultats:
//    Error
//
// Historique:
//    cree le 08/01/2023

{
    print(true);
}
